[workspace]

resolver = "3"

members = [
    "crates/c01_ownership_borrow_scope",
    "crates/c02_type_system",
    "crates/c03_control_fn",
    "crates/c04_generic",
    "crates/c05_threads",
    "crates/c06_async",
    "crates/c07_process",
    "crates/c08_algorithms",
    "crates/c09_design_pattern",
    "crates/c10_networks",
    "crates/c11_macro_system_proc",
    "crates/c12_wasm",
    "crates/c13_embedded",
    "crates/c14_semantic_web",
    "crates/c15_verification_tools",
    "crates/c16_gui",
    "crates/c17_resolver_v3_public_demo",
    "crates/common",
    "crates/integration_tests",
    "exercises",
]

exclude = [
    "crates/c08_algorithms/fuzz",
    "crates/c13_embedded/real-hardware-demos/embassy-demo",
    "crates/c13_embedded/real-hardware-demos/rtic-demo",
    "vendor",
]

[workspace.package]
version = "3.1.0"
edition = "2024"
rust-version = "1.97.1"
license = "MIT OR Apache-2.0"
authors = ["Rust Learning Community"]
repository = "https://github.com/martin-ly/rust-lang"
homepage = "https://github.com/martin-ly/rust-lang"

[profile.release]

#opt-level = "s" 和 opt-level = "z" 专门针对减小二进制体积设计
#"s"：在保持较好性能的同时尽可能减小体积
#"z"：最大程度地优化体积，可能牺牲少量性能
opt-level = 3

#链接时优化（Link Time Optimization, LTO）允许编译器跨 crate 边界进行整体优化，消除冗余代码和数据。
#lto = "fat" 这种配置下，编译器会在链接阶段对所有代码进行全局优化，通常能减少 20-30% 的体积。
#对于对体积有极端要求的场景，可以使用 "thin" 替代 "fat"，在优化效果和编译时间之间取得平衡。
lto = "fat"

# codegen-units = 1 表示单个代码生成单元，即每个 crate 都独立编译。
# 这种配置下，每个 crate 的编译速度会更快，但可能会牺牲一些整体优化效果。
# 如果希望获得更好的优化效果，可以将 codegen-units 设置为更大的值（如 256）。
codegen-units = 1

#去除调试符号是减小二进制体积最有效的方法之一。
#strip = true
strip = "symbols"

# Rust 1.95+: 分割调试信息 (macOS 上特别有效，1.97+ 仍适用)
split-debuginfo = "packed"

# 默认情况下，Rust 在 panic 时会进行栈展开，提供详细的调用栈信息。
# 但在生产环境中，特别是对于命令行工具和小型服务，立即终止程序可能是更合适的选择：
# 这种配置不仅减小了二进制体积（因为它不需要包含栈展开的代码），还能略微提升性能。
panic = "abort"

# CPU指令集优化 - Rust 1.95+ 推荐设置 (1.97+ 仍适用)
# 启用所有可用的CPU指令集优化
# 注意: target-cpu 和 target-feature 需要在编译时通过环境变量或.cargo/config.toml设置

# LTO 通过全局代码分析消除了未被使用的函数和数据；
# 调整优化级别使编译器优先选择空间效率更高的指令序列；
# 去除调试符号直接移除了大量的辅助信息；
# 改变 panic 策略避免了栈展开代码的引入；
# Musl 工具链则提供了一个更精简的标准库实现。
# 从编译流程角度看，这些优化发生在不同的阶段：
#  LTO 在链接阶段工作，优化级别影响编译中期决策，而去除符号和 panic 策略则影响前期的代码生成策略。
#  这种多阶段的优化组合确保了最终生成的二进制文件既小巧又高效。

[profile.dev]
# ========== 开发环境编译速度优化 ==========
# 优化级别 0 = 最快编译速度 (推荐开发使用)
opt-level = 0
# 调试信息级别: 0=无, 1=仅行表, 2=完整
debug = 1
debug-assertions = true
overflow-checks = true
# 增量编译 - 开发环境必须启用
incremental = true
# 代码生成单元: 更多=并行度更高=编译更快
codegen-units = 256
# 使用 unwind panic 可以获得更好的调试信息
panic = "unwind"
# Rust 1.97: 开发环境使用分割调试信息（减小目标文件体积）
split-debuginfo = "unpacked"

# 开发环境构建优化 - 构建依赖使用轻量级优化
[profile.dev.build-override]
opt-level = 1
codegen-units = 16

[profile.test]
# ========== 测试环境编译速度优化 ==========
opt-level = 1
debug = 1
# 增量编译加速测试
codegen-units = 256
incremental = true

[profile.bench]
# ========== 基准测试优化 - 平衡编译和运行速度 ==========
opt-level = 3
debug = false
# 使用 thin LTO - 比 fat LTO 快很多，性能接近
lto = "thin"
# 更多代码生成单元 = 更快编译
codegen-units = 4
# 注意: bench profile 不支持 panic 设置

# 基准测试构建优化
[profile.bench.build-override]
opt-level = 2
codegen-units = 16

# ========== release 构建依赖优化 ==========
[profile.release.build-override]
opt-level = 2
codegen-units = 16

# ========== 新增: 快速发布 Profile ==========
# 使用: cargo build --profile release-fast
# 适用于: 需要快速编译但仍需要优化的场景
[profile.release-fast]
inherits = "release"
# 使用 thin LTO 替代 fat LTO，编译速度更快
lto = "thin"
# 增加 codegen-units 以提高并行度
codegen-units = 4
# 保持其他 release 优化
opt-level = 3
strip = "symbols"
panic = "abort"

[profile.release-fast.build-override]
opt-level = 2
codegen-units = 16

# ========== 新增: 最小体积 Profile ==========
# 使用: cargo build --profile size
# 适用于: 对二进制体积有严格要求的场景
[profile.size]
inherits = "release"
# 优化级别 z = 最小体积
opt-level = "z"
# 使用 fat LTO 获得最佳体积优化
lto = "fat"
# 单一 codegen-unit 获得最佳优化
codegen-units = 1
# 完全剥离符号
strip = true
panic = "abort"
# 禁用增量编译以获得最佳优化
incremental = false

[profile.size.build-override]
opt-level = 3
codegen-units = 1

# ========== 新增: 超快速检查 Profile ==========
# 使用: cargo check --profile check-fast
# 适用于: 快速语法检查，不运行代码
[profile.check-fast]
inherits = "dev"
opt-level = 0
debug = 0
codegen-units = 1024
panic = "abort"

# 工作区级别的依赖版本统一
# 2026-07-22: Rust 1.97.1 stable / 1.98.0-beta / 1.99.0-nightly 同步更新
# rust-version: 1.97.1
# 注意: 优先选择稳定成熟的版本，避免使用 alpha/RC 版本导致的破坏性变更
[workspace.dependencies]
# 本地 crate
common = { path = "crates/common", default-features = false }

# 2025-12-11: 网络和 HTTP 相关最新稳定版本
# reqwest: 高级HTTP客户端库，支持异步请求和JSON序列化
# 注意: reqwest 0.12.x 使用 "rustls-tls" 特性，0.13.x 使用 "rustls" 特性
reqwest = { version = "0.13.4", features = ["json", "rustls"] }
# hyper: 底层HTTP库，提供高性能的HTTP/1.1和HTTP/2支持
hyper = { version = "1.11.0", features = ["full"] }
# hyper-util: hyper的实用工具库，提供连接池和服务器功能
hyper-util = "0.1.20"
# hyper-rustls: hyper与rustls的集成，提供安全的TLS连接
# 2026-06-19: 修正为 0.27.9 (0.28.x 不存在/yanked，cargo 实际解析为 0.27.9)
hyper-rustls = "0.27.9"
# libp2p: P2P网络协议栈
# 2026-05-28: 已升级至 0.56.0，hickory-resolver 同步升级至 0.26.1，c10_networks DNS 模块已适配
libp2p = { version = "0.56.0", features = ["tokio", "tcp", "noise", "yamux", "gossipsub", "kad", "identify"] }
# multibase: 锁定 0.9.2，避免 0.9.3 引入 base45 传递依赖
# multiaddr -> multibase 默认会选择最新兼容版本；通过 workspace 依赖强制固定
multibase = "=0.9.2"
# hyper-tls: hyper与native-tls的集成，提供TLS支持
hyper-tls = "0.6.0"
# hyper-timeout: hyper的超时支持
# 2026-06-19: 修正为 0.5.2 (0.6.x 不存在/yanked，cargo 实际解析为 0.5.2)
hyper-timeout = "0.5.2"
# h2: HTTP/2协议的Rust实现
# 2026-06-19: 0.4.14 -> 0.4.15
h2 = "0.4.15"
# http: HTTP类型和特征的Rust实现
# 2026-06-19: 1.4.1 -> 1.4.2
http = "1.4.2"

# 2025-12-11: Web 框架最新稳定版本
# axum: 现代Web框架，专注于人体工程学和模块化设计
axum = { version = "0.8.9", features = ["macros", "multipart", "tracing"] }
# axum-core: axum的核心功能库 (与axum 0.8.x配套)
axum-core = "0.5.6"
# tower: 异步服务抽象层，提供中间件和超时支持
tower = "0.5.3"
# tower-http: tower的HTTP中间件集合
tower-http = { version = "0.6.11", features = [
    "cors",           # 跨域资源共享支持
    "trace",          # 请求追踪支持
    "timeout",        # 请求超时支持
    "compression-gzip", # Gzip压缩支持
] }
# actix-web: 高性能的Web框架，基于Actor模型
actix-web = "4.13.0"
# actix: Actor系统框架
actix = "0.13.5"
# actix-rt: actix的运行时支持
actix-rt = "2.11.0"

# 2026-06-29: 二线 Web 框架与模板引擎专题
# salvo: 现代 Rust Web 框架，强调高性能与可扩展性
# 2026-07-11: 0.93.0 -> 0.94.0 (cargo update 提示落后最新，c06_async 示例已验证)
# 2026-07-18: 0.94.0 -> 0.95.0 (cargo update)
salvo = "0.95.0"
# ntex: 可组合网络服务框架，与 actix-web 同源设计
ntex = { version = "3.10.1", features = ["tokio"] }
# askama: 类型安全、编译期 Jinja-like 模板引擎
askama = "0.16.0"
# maud: 编译期 HTML 模板宏，Rust-native DSL
maud = "0.27.0"

# 2025-09-27: 终端UI库最新稳定版本
# crossterm: 跨平台终端操作库，支持Windows、Linux和macOS
crossterm = "0.29.0"

# 2025-12-11: 前端框架 - 跨平台UI
# dioxus: 全栈Web框架，支持Web、桌面和移动应用开发
# 2026-04-24: 0.7.6 稳定版已发布，升级自 0.7.0-rc.0
dioxus = "0.7.6"
dioxus-web = "0.7.6"
# dioxus-desktop: 暂时禁用，存在GTK3安全漏洞
# leptos: 全栈同构Rust Web框架，利用细粒度响应性
leptos = "0.8.12"  # 更新至最新稳定版本
leptos_axum = "0.8.6"  # 更新至最新稳定版本

# 2025-12-11: 桌面应用框架 (Tauri 2.0已解决GTK3安全漏洞)
# tauri: 使用Web技术构建跨平台桌面应用的框架
tauri = "2.11.2"
# tauri-build: tauri的构建工具
tauri-build = "2.6.2"

# 2025-12-11: 其他异步生态常用依赖（统一版本）
# async-trait: 异步trait支持库
async-trait = "0.1.91"
# async-stream: 异步流处理库 (已移除，使用 tokio-stream 替代)
# async-stream = "0.3.6"  # 已移除，使用 tokio-stream 替代
# async-std 已移除，使用 tokio 替代
# tokio-console: tokio的控制台调试工具
tokio-console = "0.1.14"
# tokio-test: tokio的测试工具
tokio-test = "0.4.5"
# mio: 跨平台异步I/O库
# 2026-05-29: cargo update 1.2.0 -> 1.2.1
mio = "1.2.1"
# tungstenite: WebSocket协议的Rust实现
# 2026-03-28: 0.28.0 -> 0.29.0 (cargo update)
# 2026-07-18: 0.29.0 -> 0.30.0 (cargo update)
tungstenite = "0.30.0"
# rcgen: X.509证书生成库
# 2026-05-12: cargo update 0.14.7 -> 0.14.8
rcgen = "0.14.8"

# 2025-10-06: 基础依赖统一
# dotenvy: 环境变量管理库，dotenv的维护良好的分支
dotenvy = "0.15.7"
# tempfile: 临时文件和目录管理库
tempfile = "3.27.0"

# 2025-12-11: gRPC 相关最新稳定版本
# tonic: 高性能的gRPC over HTTP/2实现，专注于互操作性和灵活性
tonic = { version = "0.14.6", features = [
    "transport",        # 传输层支持
    "tls-ring",         # 使用ring的TLS支持
    "tls-webpki-roots", # WebPKI根证书支持
    "channel",          # 客户端通道支持
] }
# tonic-build: tonic的构建工具，用于生成gRPC代码
tonic-build = "0.14.6"
# tonic-prost: tonic与prost的集成
tonic-prost = "0.14.6"
tonic-prost-build = "0.14.6"
# prost: Protocol Buffers的Rust实现
# 2026-06-19: 0.14.3 -> 0.14.4
prost = "0.14.4"
# prost-build: prost的构建工具
prost-build = "0.14.4"
# prost-derive: prost的派生宏
prost-derive = "0.14.4"
# prost-types: prost的类型定义
prost-types = "0.14.4"

# 安全更新 - 修复protobuf安全漏洞 (RUSTSEC-2024-0437)
# 注意: workspace 依赖声明仅作记录，无法强制传递依赖版本。
#       Cargo.lock 中实际解析为 protobuf 3.7.2 (prometheus 0.14.0 传递依赖)。
#       真正修复需等待 prometheus 升级或使用 [patch.crates-io] 覆盖。
# 2026-06-19: 更新记录至 4.35.1-release (crates.io 最新版)
protobuf = "4.35.1-release"

# 2025-12-11: TLS 和加密最新稳定版本
# rustls: 现代TLS库，用Rust编写，提供高性能和安全性
# 2026-04-24: 0.23.38 -> 0.23.39 (cargo update，Rust 1.96.0 compatible)
# 2026-06-23: 0.23.40 -> 0.23.41 (cargo update)
# 2026-07-18: 0.23.41 -> 0.23.42 (cargo update，aws-lc-rs 同步升级)
rustls = "0.23.42"
# rustls-webpki: rustls的WebPKI支持
rustls-webpki = "0.103.13"
# tokio-rustls: tokio与rustls的集成
tokio-rustls = "0.26.4"
# ring: 加密原语库，提供高性能的加密算法实现
ring = "0.17.14"
# webpki-roots: WebPKI根证书集合
# 2026-06-19: 1.0.7 -> 1.0.8
webpki-roots = "1.0.9"

# 2025-12-11: 错误处理最新稳定版本
# thiserror: 错误类型派生宏库，简化错误处理
thiserror = "2.0.19"
# anyhow: 灵活的错误处理库，基于std::error::Error构建
# 2026-06-27: cargo update 1.0.102 -> 1.0.103
anyhow = "1.0.104"

# 2025-12-11: 序列化最新稳定版本
# serde: 通用序列化/反序列化框架，支持多种数据格式
serde = { version = "1.0.229", features = ["derive"] }
# serde_json: JSON序列化/反序列化支持
# 2026-07-20: cargo update 1.0.150 -> 1.0.151
serde_json = "1.0.151"
# serde_yaml: YAML序列化/反序列化支持
serde_yaml = "0.9.34"
# 二进制序列化 benchmark 已移除（避免引入额外依赖）
# 如需对比，可使用 workspace 已有的 serde_json 或自行引入 rmp-serde

# 2025-12-11: 异步运行时最新稳定版本
# tokio: 事件驱动的非阻塞I/O平台，用于编写异步I/O应用程序
# 2026-07-17: cargo update 1.52.4 -> 1.53.0
# 2026-07-21: cargo update 1.53.0 -> 1.53.1
tokio = { version = "1.53.1", features = ["full"] }
# tokio-util: tokio的实用工具库
# 2026-07-21: cargo update 0.7.18 -> 0.7.19
tokio-util = "0.7.19"
# tokio-stream: tokio的流处理支持
# 2026-07-22: cargo update 0.1.18 -> 0.1.19
tokio-stream = "0.1.19"
# tokio-tungstenite: tokio与tungstenite的集成，提供WebSocket支持
# 2026-03-28: 0.28.0 -> 0.29.0 (cargo update)
# 2026-07-18: 0.29.0 -> 0.30.0 (cargo update)
tokio-tungstenite = "0.30.0"
# socket2: 跨平台socket API封装，tokio/quinn/libp2p-tcp等传递依赖
# 2026-05-29: cargo update 0.6.3 -> 0.6.4
socket2 = "0.6.4"
# futures: 异步编程的基础库
futures = "0.3.33"
# futures-util: futures的实用工具库
futures-util = "0.3.33"

# 2025-12-11: 日志和追踪最新稳定版本
# tracing: 应用程序级别的追踪库，用于结构化日志记录
tracing = "0.1.44"
# tracing-subscriber: tracing的订阅者实现，支持多种输出格式
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
# log: 标准日志库，提供简单的日志记录接口
# 2026-06-22: 0.4.32 -> 0.4.33 (cargo update)
log = "0.4.33"
# env_logger: log 的简单初始化封装（仅 c06_async 示例使用）
# 注意: env_logger 0.11.x 默认特性包含 humantime -> jiff -> defmt；
#       禁用 default-features 可阻止 env_logger 引入该路径。
#       jiff 当前仍由 kube / k8s-openapi 传递依赖引入，与 env_logger 无关。
env_logger = { version = "0.11.11", default-features = false, features = ["auto-color", "regex"] }
# prometheus: Prometheus指标收集库
prometheus = "0.14.0"
# tracing-opentelemetry: tracing与OpenTelemetry的集成 - 2025年10月最新版本
tracing-opentelemetry = "0.33.0"
# opentelemetry: OpenTelemetry的Rust实现
# 2026-05-28: 0.32.0 stable，与 opentelemetry_sdk 0.32.x 配套
opentelemetry = "0.32.0"
# opentelemetry_sdk: OpenTelemetry SDK
# 2026-05-28: 0.32.0 -> 0.32.1 (cargo update)
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"] }
# opentelemetry-otlp: OpenTelemetry OTLP导出器
# 2026-05-28: 0.32.0 stable，与 opentelemetry 0.32.x 配套
opentelemetry-otlp = { version = "0.32.0", features = ["http-json"] }
# opentelemetry-stdout: OpenTelemetry标准输出导出器
# 2026-05-28: 0.32.0 stable，与 opentelemetry 0.32.x 配套
opentelemetry-stdout = "0.32.0"
# opentelemetry-proto: OpenTelemetry协议缓冲区定义
# 2026-05-28: 0.32.0 stable，与 opentelemetry 0.32.x 配套
opentelemetry-proto = { version = "0.32.0", features = ["gen-tonic"] }

# 2025-09-27: 指标最新稳定版本
# metrics: 指标收集库，提供高性能的指标记录
metrics = "0.24.6"
# metrics-exporter-prometheus: metrics的Prometheus导出器
metrics-exporter-prometheus = { version = "0.18.3", default-features = false }

# 2025-12-25: 时间处理最新稳定版本
# chrono: 日期和时间处理库，支持多种日期格式和时区
# 2026-06-19: 0.4.44 -> 0.4.45
chrono = { version = "0.4.45", features = ["serde"] }
# time: 现代时间处理库，提供高性能的时间操作
# 2026-06-22: 0.3.49 -> 0.3.51 (cargo update)
# 2026-07-08: 0.3.51 -> 0.3.53 (cargo update)
# 2026-07-20: cargo update 0.3.53 -> 0.3.54
time = { version = "0.3.54", features = ["serde", "macros"] }

# 2025-12-11: 其他常用库最新稳定版本
# uuid: UUID生成和解析库，支持多种UUID版本
# 2026-07-16: cargo update 1.23.5 -> 1.24.0
uuid = { version = "1.24.0", features = ["v4", "serde"] }
# url: URL解析和操作库
url = "2.5.8"
# bytes: 字节缓冲区处理库，提供高效的字节操作
# 2026-07-09: cargo update 1.12.0 -> 1.12.1
bytes = "1.12.1"
# indexmap: 保持插入顺序的HashMap实现
indexmap = "2.14.0"
# once_cell: 单次初始化单元格，用于全局变量初始化
once_cell = "1.21.4"
# num_cpus: CPU核心数检测库
num_cpus = "1.17.0"
# libc: 系统调用接口库，提供与C库的绑定
# 2026-04-24: 0.2.186 (Rust 1.96.0 compatible)
# 2026-07-21: cargo update 0.2.186 -> 0.2.187
# 2026-07-21: cargo update 0.2.187 -> 0.2.188
# 2026-07-22: cargo update 0.2.188 -> 0.2.189
libc = "0.2.189"
# rand: 随机数生成库，提供高质量的随机数生成
# 2026-03-28: 升级到 0.10.x (重大版本更新)
# 2026-07-03: cargo update 0.10.1 -> 0.10.2
rand = "0.10.2"
# chacha20: ChaCha20 流密码 / rand 0.10.x 的随机数生成后端
# 注意: rand 0.10.x 已改用 chacha20 直接作为 ChaCha20 后端，不再依赖 rand_chacha。
#       cargo update 2026-06-24: chacha20 0.10.0 -> 0.10.1
chacha20 = "0.10.1"
# rand_core: 随机数核心库
rand_core = "0.10.1"
# sha2: SHA-2哈希算法实现
# 2026-03-28: 升级到 0.11.0 (重大版本更新)
sha2 = "0.11.0"
# hex: 十六进制编码/解码库
hex = "0.4.3"
# twox-hash: 高性能哈希算法
twox-hash = "2.1.2"
# memoffset: 内存偏移计算库
memoffset = "0.9.1"

# 2025-12-11: 数据库和存储最新稳定版本
# sea-orm: 异步动态ORM，支持多种数据库后端
# 2026-06-19: 2.0.0-rc.40 -> 2.0.0-rc.41
# 2026-07-16: cargo update 自动解析至 2.0.0-rc.43
# 2026-07-09: Sea-ORM 2.0 stable 仍未发布（crates.io max_stable_version = 1.1.20）
sea-orm = { version = "2.0.0-rc.43", features = [
    "sqlx-postgres",      # PostgreSQL支持
    "runtime-tokio-rustls", # tokio运行时和rustls支持
], default-features = false }
# sqlx: 异步纯Rust SQL工具包，支持编译时检查的查询
sqlx = { version = "0.9.0", features = [
    "runtime-tokio",       # tokio运行时支持
    "tls-rustls",          # rustls TLS支持
    "postgres",            # PostgreSQL支持
    # "mysql",             # MySQL支持（已移除：避免引入 rsa 依赖（RUSTSEC-2023-0071）
    "sqlite",              # SQLite支持
    "chrono",              # 时间类型支持
    "uuid",                # UUID类型支持
], default-features = false }
# redis: Redis客户端库，支持异步操作
# 2026-07-04: 1.2.4 -> 1.3.0 (cargo update)
# 2026-07-17: cargo update 1.4.0 -> 1.4.1
redis = "1.4.1"
# rusqlite: SQLite的Rust绑定，提供类型安全的SQLite接口
rusqlite = { version = "0.39.0", default-features = false }
# mysql_async: MySQL异步客户端
mysql_async = "0.36.2"
# mysql_common: MySQL通用类型
mysql_common = "0.35.5"
# mysql-common-derive: MySQL通用类型派生宏
mysql-common-derive = "0.32.1"

# 2025-12-11: 性能测试和基准测试最新稳定版本
# criterion: 统计驱动的微基准测试库，提供详细的性能分析
criterion = "0.8.2"

# 2026-03-18: 配置管理最新稳定版本
# config: 分层配置系统，支持多种配置格式
# 2026-06-19: 0.15.23 -> 0.15.24
# 2026-06-27: cargo update 0.15.24 -> 0.15.25
config = "0.15.25"

# 2025-12-11: 并发和同步最新稳定版本
# crossbeam: 并发编程工具库，提供无锁数据结构和同步原语
crossbeam = "0.8.4"
# crossbeam-channel: 多生产者多消费者通道
crossbeam-channel = "0.5.15"
# crossbeam-queue: 无锁队列
crossbeam-queue = "0.3.12"
# crossbeam-utils: 并发工具
crossbeam-utils = "0.8.21"
# crossbeam-epoch: 基于epoch的内存回收
crossbeam-epoch = "0.9.18"
# crossbeam-deque: 工作窃取双端队列
crossbeam-deque = "0.8.6"
# rayon: 简单的工作窃取并行库，提供数据并行处理
rayon = "1.12.0"
# dashmap: 高性能并发HashMap，支持多线程安全访问
dashmap = "6.2.1"
# parking_lot: 更紧凑高效的同步原语实现 - 版本 0.12+ (字母索引)
parking_lot = "0.12.5"
# syn: 语法解析库
# 2026-06-19: 2.0.117 -> 2.0.118
# 2026-07-19: cargo update 2.0.118 -> 2.0.119
syn = "2.0.119"

# 2026-03-26: 测试相关最新稳定版本
# mockall: 强大的模拟对象库，用于单元测试
mockall = "0.14.0"
# proptest: 基于属性的测试库，类似Hypothesis - 版本 1.5+ (字母索引)
proptest = "1.11.0"
# rstest: 基于fixture的测试框架，支持参数化测试
rstest = "0.26.1"  # 更新至最新稳定版本
# cargo-tarpaulin: 代码覆盖率测试工具
cargo-tarpaulin = "0.35.4"
# cargo-audit: 安全漏洞审计工具
cargo-audit = "0.22.1"

# 2025-10-11: AI 和机器学习最新稳定版本
# candle-core: 极简主义ML框架的核心库
# 2026-07-11: candle 系列 0.10.2 -> 0.11.0 (cargo update 提示落后最新，c08 示例已验证)
candle-core = "0.11.0"
# candle-nn: candle的神经网络支持
candle-nn = "0.11.0"
# candle-transformers: candle的Transformer模型支持
candle-transformers = "0.11.0"
# tch: PyTorch的Rust绑定，提供深度学习支持
tch = "0.24.0"
# petgraph: 图数据结构和算法库
petgraph = "0.8.3"
# image: 图像处理库
image = "0.25.10"
# imageproc: 图像处理算法库
imageproc = "0.26.2"
# nalgebra: 线性代数库
nalgebra = "0.34.2"
# nalgebra-macros: nalgebra的宏支持
nalgebra-macros = "0.3.0"
# ndarray: N维数组库 - 版本 0.15+ (字母索引)
ndarray = "0.17.2"
# ndarray-stats: ndarray的统计功能
ndarray-stats = "0.7.0"
# png: PNG图像格式支持
png = "0.18.1"
# tiff: TIFF图像格式支持
tiff = "0.11.3"
# bitflags: 位标志宏 - 2026-02-13: 2.10.0 -> 2.11.0 (cargo update)
# 2026-07-16: cargo update 2.13.0 -> 2.13.1
bitflags = "2.13.1"
# hashbrown: 高性能HashMap实现
hashbrown = "0.17.1"  # 2026-05-09: cargo update
# itertools: 迭代器工具库
# 2026-07-11: 0.14.0 -> 0.15.0 (cargo update 提示落后最新，c04 示例已验证)
itertools = "0.15.0"
# lru: LRU缓存实现 - 2026-04-18: 升级至 0.17.0
lru = "0.18.0"

# Web 和 GUI 框架 - 2025年12月11日最新稳定版本
# tauri 已移除，使用 egui/iced 替代 (解决 GTK3 安全漏洞)
# egui: 易于使用的即时模式GUI，支持Web和原生平台 - 版本 0.28+ (字母索引)
# 2026-07-08: 0.34.3 -> 0.35.0，修复 quick-xml RUSTSEC-2026-0194/0195 传递依赖
egui = "0.35.0"
# iced: 受Elm启发的跨平台GUI库
iced = "0.14.0"

# 2025年最新深度学习框架
# burn = "0.10.0"  # 暂时禁用，存在版本兼容性问题
# burn-ndarray = "0.10.0"  # 暂时禁用，存在版本兼容性问题
# burn-tch 暂时禁用，与现有tch版本冲突

# 2025-10-20: 高性能异步运行时最新稳定版本
# glommio: 线程每核心异步运行时，支持高并行异步应用程序
glommio = "0.9.0"

# bindgen: C/C++ 绑定自动生成工具
# 2026-04-27: 升级至 0.72.1，统一由工作区管理
bindgen = "0.72.1"

# 2025-09-27: 安全漏洞修复
# 替换未维护和有安全漏洞的依赖
# ahash: 高性能哈希算法实现，替代fxhash (未维护)
ahash = "0.8.12"
# quote: 代码生成宏库，替代paste (未维护)
# 2026-06-22: 1.0.45 -> 1.0.46 (cargo update)
quote = "1.0.47"  # 同步 cargo update 实际解析版本
# proc-macro2: 过程宏底层词法分析库
proc-macro2 = "1.0.107"
# proc-macro-error2: 过程宏错误处理库，替代proc-macro-error (未维护)
proc-macro-error2 = "2.0.1"
# is-terminal: 终端检测库，替代atty (有安全漏洞)
is-terminal = "0.4.17"
# wasm-bindgen: WebAssembly绑定生成器，支持WebAssembly 2.0 - 版本 0.2+ (字母索引)
# 2026-06-25: 0.2.125 -> 0.2.126
wasm-bindgen = "0.2.126"
# js-sys: WebAssembly 与 JavaScript 的绑定
# 2026-06-25: 0.3.102 -> 0.3.103
js-sys = "0.3.103"
# wasm-bindgen-futures: WebAssembly 异步 Future 支持
# 2026-06-25: 0.4.75 -> 0.4.76
wasm-bindgen-futures = "0.4.76"
# wasm-bindgen-test: WebAssembly 测试框架
wasm-bindgen-test = "0.3.72"
# nix: 系统调用安全封装库
# 2026-05-12: cargo update 0.31.2 -> 0.31.3
nix = "0.31.3"
# pingora 已移除，存在安全漏洞 (RUSTSEC-2025-0037, RUSTSEC-2025-0070)

# 2025-09-27: 安全更新 - 修复已知安全漏洞
# instant 已移除，使用 std::time::Instant 替代
# paste 已移除，使用 quote 宏替代
# proc-macro-error 已移除，使用 proc-macro-error2 替代

# 版本冲突修复 - 通过工作区依赖统一版本
# 注意: 使用 [patch.crates-io] 可能导致编译错误

# 传递依赖显式声明 - 用于版本控制和统一管理

# clap 系列 - 命令行参数解析
# 2026-07-16: cargo update 4.6.1 -> 4.6.2
# 2026-07-18: cargo update 4.6.2 -> 4.6.3
# 2026-07-22: cargo update 4.6.3 -> 4.6.4
clap = { version = "4.6.4", default-features = false }
clap_builder = { version = "4.6.2", default-features = false }
clap_complete = "4.6.5"
clap_derive = "4.6.1"

# DNS 解析库
# 2026-05-18: 升级至 0.26.1，修复 RUSTSEC-2026-0118/0119
hickory-proto = "0.26.1"
hickory-resolver = { version = "0.26.1", features = ["tokio", "system-config"] }

# WebSocket 底层库
# 2026-03-28: 更新至 0.29.0
# tungstenite 已在上文声明

# 加密相关传递依赖
# 注意: crypto-mac 0.10.1 需要 subtle =2.4，与 rustls 需要的 subtle ^2.5.0 冲突
# 2026-04-08: 保持 0.10.0 以避免 subtle 版本冲突
# 2026-06-19: 当前依赖树中已无 crypto-mac，保留仅作记录
crypto-mac = "=0.10.0"
# 注意: 存在 universal-hash 多版本
# 2026-06-19: Cargo.lock 实际解析为 0.5.1，更新记录以匹配实际解析
universal-hash = "=0.5.1"
# 2026-06-10: cargo update 验证，crypto-common 0.1.7 (digest/aead 等传递依赖)
#       精确锁定 generic-array = "=0.14.7"，无法升级至 0.14.9。需等 crypto-common 新版解锁
#       验证: crypto-common 0.2.2 已可用但改用 hybrid-array；digest 0.11.x / sha2 0.11.x
#       / aead 0.6.0 / aes-gcm 0.11.0 虽已稳定，但 sqlx-core 0.9.0 仍锁定 sha2 ^0.10.0
# 2026-07-11 复核: crypto-common 0.1.7 对 generic-array 声明了 "=0.14.7" 精确约束，
#       升级 0.14.9 会导致解析失败，故继续保持精确锁定 (非本仓库可直接修复项)
# 注: 此为传递依赖，无子 crate 直接引用，workspace 版本仅作记录
generic-array = "=0.14.7"

# 解析器组合子库
# 2026-04-18: 升级至 8.0.0
nom = "8.0.0"

# 其他传递依赖
# 2026-06-10: cargo update 验证，matchit 0.8.6 可用，但 axum 0.8.9 (crates.io 最新) 精确锁定 =0.8.4，无法升级
matchit = "=0.8.4"
# unicode-width: 0.2.2 已可用 (cargo update 成功解析)
unicode-width = "0.2.2"
# either: 1.16.0 已可用 (cargo update 成功解析)
either = "1.16.0"
# futures-timer: 3.0.4 已可用 (cargo update 成功解析)
futures-timer = "3.0.4"
# pulldown-cmark: 0.13.4 已可用 (cargo update 成功解析)
pulldown-cmark = "0.13.4"
# ordered-float: 存在多版本 (4.6.0 用于 sea-query, 5.3.0 用于 wgpu-hal)
#       暂时不强制统一，等待 sea-query 升级支持 5.x
# windows-sys: 存在多版本 (0.36.1, 0.45.0, 0.48.0, 0.52.0, 0.59.0, 0.60.2, 0.61.2)
#       2026-05-29: cargo update 后新增 0.60.2/0.61.2，windows-targets 新增 0.53.5
#       Windows 生态传递依赖普遍锁定不同版本，暂无法统一

# 依赖版本约束 - 在工作区依赖中统一版本 end

# Bare-metal 嵌入式相关依赖 - 2026年4月24日添加
# cortex-m: ARM Cortex-M 处理器核心外设访问库
# cortex-m-rt: Cortex-M 运行时（启动代码、向量表）
# panic-halt: 最简单的 panic handler（进入无限循环）
# 2026-04-27: 升级至 1.0.0 (stable)
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
volatile-register = "0.2.2"

# 工作区特性标志配置 - 优化编译时间和依赖管理
# 注意: 工作区依赖不能设为可选，特性标志在各crate中配置

# 安全补丁 - 强制使用安全版本的依赖
# 注意：通过工作区依赖统一管理版本，避免使用patch

# 传递依赖版本锁定
# 2026-05-02: const-hex 1.19.0 引入 proptest 作为默认依赖，增加编译负担
# 2026-06-19: 当前无子 crate 直接依赖 const-hex，workspace 声明不影响解析；
#       Cargo.lock 实际解析为 1.19.1，更新记录以匹配实际解析
const-hex = "=1.19.1"

# ========== 待评估升级项 ==========
# 2026-06-19: 本次全面升级后，以下依赖暂时锁定，需在条件成熟时评估升级
# 本次已升级项:
# - hyper-rustls: 修正 Cargo.toml 中错误的 0.28.1 -> 0.27.9 (0.28.x 不存在/yanked)
# - hyper-timeout: 修正 Cargo.toml 中错误的 0.6.1 -> 0.5.2 (0.6.x 不存在/yanked)
# - chacha20: 0.10.0 -> 0.10.1 (cargo update 2026-06-24，rand 0.10.x 后端)
# - h2: 0.4.14 -> 0.4.15
# - http: 1.4.1 -> 1.4.2
# - prost 系列: 0.14.3 -> 0.14.4
# - protobuf: 4.34.2-release -> 4.35.1-release
# - webpki-roots: 1.0.7 -> 1.0.8
# - log: 0.4.32 -> 0.4.33 (cargo update 2026-06-22)
# - chrono: 0.4.44 -> 0.4.45
# - time: 0.3.49 -> 0.3.51 (cargo update 2026-06-22)
# - time: 0.3.51 -> 0.3.53 (cargo update 2026-07-08)
# - time: 0.3.53 -> 0.3.54 (cargo update 2026-07-20)
# - quote: 1.0.45 -> 1.0.46 (cargo update 2026-06-22)
# - 传递依赖 (cargo update 自动升级):
#     libp2p-quic 0.13.0 -> 0.13.1
#     quinn 0.11.9 -> 0.11.11
#     quinn-proto 0.11.14 -> 0.11.15
#     time-macros 0.2.29 -> 0.2.30
#     time-macros 0.2.31 -> 0.2.32 (cargo update 2026-07-20, time 0.3.54 传递依赖)
# - bytes: 1.11.1 -> 1.12.0
# - redis: 1.2.3 -> 1.2.4 (cargo update 2026-06-22)
# - config: 0.15.23 -> 0.15.24
# - syn: 2.0.117 -> 2.0.118
# - wasm-bindgen 系列: wasm-bindgen 0.2.126 / js-sys 0.3.103 / wasm-bindgen-futures 0.4.76
# - sea-orm: 2.0.0-rc.40 -> 2.0.0-rc.41 (仍等待 stable)
# - sea-orm: 2.0.0-rc.41 -> 2.0.0-rc.42 (cargo update 2026-07-08)
# - web-sys (c12_wasm): 0.3.102 -> 0.3.103
# - protoc-bin-vendored (c10_networks): 3.1.0 -> 3.2.0
# - const-hex / universal-hash: 更新记录以匹配 Cargo.lock 实际解析版本
# - tokio: 1.52.4 -> 1.53.0 (cargo update 2026-07-17)
# - tokio: 1.53.0 -> 1.53.1 (cargo update 2026-07-21)
# - tokio-util: 0.7.18 -> 0.7.19 (cargo update 2026-07-21, workspace 依赖同步)
# - libc: 0.2.187 -> 0.2.188 (cargo update 2026-07-21, workspace 依赖同步)
# - ntex-rt: 3.15.5 -> 3.15.7 (cargo update 2026-07-21, ntex 传递依赖)
# - xxhash-rust: 0.8.17 -> 0.8.18 (cargo update 2026-07-21, redis/server_fn 传递依赖)
# - redis: 1.4.0 -> 1.4.1 (cargo update 2026-07-17)
# - ntex-bytes: 1.8.0 -> 1.9.0 (cargo update 2026-07-17, ntex 传递依赖)
# - ntex-net: 3.13.0 -> 3.13.1 (cargo update 2026-07-17, ntex 传递依赖)
# - ntex-tls: 3.7.0 -> 3.8.0 (cargo update 2026-07-17, ntex 传递依赖)
# - tokio-macros: 2.7.0 -> 2.7.1 (cargo update 2026-07-17, tokio 传递依赖)
# - portable-atomic: 1.13.1 -> 1.14.0 (cargo update 2026-07-17, 嵌入式传递依赖)
# - salvo: 0.94.0 -> 0.95.0 (cargo update 2026-07-18, c06_async dev-dependency)
# - tokio-tungstenite: 0.29.0 -> 0.30.0 (cargo update 2026-07-18, c10_networks workspace 依赖)
# - tungstenite: 0.29.0 -> 0.30.0 (cargo update 2026-07-18, 与 tokio-tungstenite 同步)
# - rustls: 0.23.41 -> 0.23.42 (cargo update 2026-07-18, aws-lc-rs 同步升级)
# - anyhow: 1.0.103 -> 1.0.104 (cargo update 2026-07-18)
# - async-trait: 0.1.89 -> 0.1.91 (cargo update 2026-07-18)
# - thiserror: 2.0.18 -> 2.0.19 (cargo update 2026-07-18)
# - futures: 0.3.32 -> 0.3.33 (cargo update 2026-07-18)
# - futures-util: 0.3.32 -> 0.3.33 (cargo update 2026-07-18)
# - serde: 1.0.228 -> 1.0.229 (cargo update 2026-07-18)
# - quote: 1.0.46 -> 1.0.47 (cargo update 2026-07-18)
# - proc-macro2: 1.0.106 -> 1.0.107 (cargo update 2026-07-18)
# - webpki-roots: 1.0.8 -> 1.0.9 (cargo update 2026-07-18)
# - 传递依赖 (cargo update 2026-07-22):
#     ammonia: 4.1.3 -> 4.1.4
#     aws-config: 1.9.0 -> 1.10.0
#     aws-runtime: 1.8.1 -> 1.9.0
#     aws-sdk-s3: 1.138.1 -> 1.139.0
#     aws-sdk-sso: 1.103.0 -> 1.104.0
#     aws-sdk-ssooidc: 1.105.0 -> 1.106.0
#     aws-sdk-sts: 1.108.0 -> 1.109.0
#     aws-smithy-query: 0.61.1 -> 0.62.0
#     aws-smithy-xml: 0.61.1 -> 0.62.0
#     aws-types: 1.4.0 -> 1.5.0
#     glob: 0.3.3 -> 0.3.4
#     leptos_router: 0.8.14 -> 0.8.15
#     libp2p-gossipsub: 0.49.4 -> 0.49.5
#     surrealdb 系列: 3.2.1 -> 3.2.3 (surrealdb, surrealdb-collections, surrealdb-core,
#       surrealdb-strand, surrealdb-types, surrealdb-types-derive)
#     syn 3.x: 3.0.2 -> 3.0.3 (cxx 等传递依赖)
# - workspace 依赖同步 (cargo update 2026-07-22):
#     clap: 4.6.3 -> 4.6.4
#     libc: 0.2.188 -> 0.2.189
#     tokio-stream: 0.1.18 -> 0.1.19
# - c10_networks 直接依赖同步 (cargo update 2026-07-22):
#     aws-config: 1.9.0 -> 1.10.0 (Cargo.toml 声明同步)
#     aws-sdk-s3: 1.138.1 -> 1.139.0 (Cargo.toml 声明同步)
#     kube 系列: 4.0.0 -> 4.2.0 (kube, kube-client, kube-core, kube-derive, kube-runtime)
# - 传递依赖 (cargo update 2026-07-22):
#     granit-parser: 0.0.3 -> 0.0.7
#     serde-saphyr: 0.0.27 -> 0.0.29
# - toml: 移除 workspace 中错误的 1.1.2+spec-1.1.0 声明
#       (无子 crate 通过 workspace 引用 toml；Cargo.lock 中 toml 0.8.2 为 system-deps 传递依赖，不受 workspace 声明影响)
# - bincode 2.0.1 -> 3.0.0: 3.0.0 为 crates.io 占位符版本（compile_error!），无法使用
# - candle-core 0.9.2 -> 0.10.2: minor 版本升级，需评估 API 兼容性
# - candle-nn 0.9.2 -> 0.10.2: 与 candle-core 同步升级
# - clap 4.5.x -> 4.6.x: 已升级至 4.6.1，传递依赖兼容性问题已解决
# - eframe 0.33.3 -> 0.34.3: 已升级至 0.34.3 (cargo update 2026-05-28)
# - egui 0.33.3 -> 0.34.3: 已升级至 0.34.3 (cargo update 2026-05-28)，wgpu 传递依赖兼容
# - egui 0.34.3 -> 0.35.0: 已升级 (2026-07-08)，修复 quick-xml 传递依赖风险
# - eframe 0.34.3 -> 0.35.0: 已升级 (2026-07-08)，修复 quick-xml 传递依赖风险
# - generic-array 0.14.7 -> 0.14.9: crypto-common 0.1.7 精确锁定 =0.14.7，无法升级
#       2026-06-08 验证: 上游 axum 无新版本，状态未变
# - hecs 0.10.5 -> 0.11.0: minor 版本升级，需评估 ECS API 兼容性
# - azure_core: 0.30.0 -> 1.0.0 (2026-07-08)，同步升级 azure_identity/azure_storage_blob，修复 quick-xml 传递依赖
# - azure_storage_blob: 0.7.0 -> 1.0.0 (2026-07-08)，示例 azure_blob_list_containers.rs 已适配 API 变更
# - hickory-resolver 0.25.2 -> 0.26.1: 已升级至 0.26.1，c10_networks DNS 模块已适配
#       注意: libp2p 0.56.0 内部仍传递依赖 hickory-proto/resolver 0.25.2，无法通过 [patch.crates-io] 修复（同 registry 不能 patch 版本）
# - io-uring 0.6.4 -> 0.7.12: tokio-uring 0.5.0 (crates.io 最新) 锁定 io-uring ^0.6.0，无法升级
#       2026-06-08 验证: tokio-uring 仍为 0.5.0，状态未变
# - libp2p 0.54.1 -> 0.56.0: 已升级至 0.56.0，hickory-resolver 已同步升级至 0.26.1
# - matchit 0.8.4 -> 0.8.6: axum 0.8.9 (crates.io 最新) 精确锁定 =0.8.4，无法升级
#       2026-06-08 验证: 上游 axum 无新版本，状态未变
# - opentelemetry 0.31.0 -> 0.32.0: 已升级，tracing-opentelemetry 0.33.0 支持 opentelemetry 0.32.x
# - opentelemetry_sdk 0.32.0 -> 0.32.1: 已升级 (cargo update 2026-05-28)
# - sea-orm 2.0.0-rc.41 -> 2.0.0 stable: 等待 SeaORM 2.0 正式版发布
# - sea-query 1.0.0-rc.33 -> 1.0.1 stable: cargo update 2026-05-31 已自动升级 ✅
# - sea-query-derive 1.0.0-rc.12 -> 1.0.0 stable: cargo update 2026-05-31 已自动升级 ✅
# - sea-query-sqlx 0.8.0-rc.15 -> 0.9.1: cargo update 2026-05-31 已自动升级
# - sqlx 0.8.6 -> 0.9.0: cargo update 2026-05-31 重大版本升级，需验证兼容性
# - tracing-opentelemetry 0.32.1 -> 0.33.0: 已升级至 0.33.0
# - unicode-width 0.2.0 -> 0.2.2: 已升级，传递依赖兼容性问题已解决
# - burn / burn-ndarray: 保持禁用，等待版本兼容问题解决
# - backoff 0.4.0: 已标记为 unmaintained (RUSTSEC-2025-0012)；crates/ 中无实际依赖（c06_async 已改用内部实现），无需修改
# - rustls feature "ring": 0.23.41 已默认使用 aws-lc-rs 作为加密后端；
#   Cargo.lock 中 ring 为 reqwest/hyper-rustls 传递依赖引入，非本项目直接配置，无需手动修改
# - paste 1.0.15: 已忽略 (RUSTSEC-2024-0436)，gemm/candle-core/libp2p 深层传递依赖，暂无法移除；详见 .cargo/audit.toml
# - atomic-polyfill 1.0.3: 已修复 ✅ (RUSTSEC-2023-0089)，2026-06-25 移除 c10_networks 的 postcard dev-dependency，不再进入 Cargo.lock
# - bare-metal 0.2.5: 已忽略 (RUSTSEC-2026-0110)，cortex-m 0.7.7 传递依赖，仅 ARM 嵌入式 target 使用
# - instant 0.1.13: 已忽略 (RUSTSEC-2024-0384)，glommio 0.9.0 -> futures-lite 1.13 传递依赖，仅 Linux 实验性模块

# 安全审计状态 (2026-07-08)
# 已修复:
#   - RUSTSEC-2023-0071 (rsa Marvin Attack): 已移除 workspace sqlx 的 "mysql" feature，
#     sqlx-mysql 和 rsa 不再出现在编译依赖树中。详见 .cargo/audit.toml
#   - RUSTSEC-2026-0194/0195 (quick-xml HIGH severity): 部分修复
#       * c10_networks 的 Azure SDK 从 0.30.0/0.7.0 升级至 1.0.0，将 quick-xml 从 0.38.4 推到 0.39.4
#       * c16_gui 的 egui/eframe 从 0.34.3 升级至 0.35.0
#       * 剩余 quick-xml 0.39.4 由 typespec 1.0.0 与 wayland-scanner 0.31.10 锁定，
#         crates.io 暂无修复版本，已在 .cargo/audit.toml 中忽略并记录 rationale
#   - RUSTSEC-2025-0012 (backoff 0.4.0 unmaintained): 已通过升级 c10_networks 的
#     kube 0.98 -> 4.0.0 / k8s-openapi 0.24 -> 0.28.0 移除 backoff 传递依赖
#   - surrealdb 2.0.0 -> 3.2.0: 已完成 API 迁移（示例 surrealdb_basic_crud.rs 已适配
#     SurrealValue derive），同步消除旧版传递依赖风险
# 待上游修复:
#   - RUSTSEC-2026-0118/0119 (hickory-proto 0.25.2): libp2p 0.56.0 内部传递依赖，
#     本项目未启用 mdns/dns feature，0.25.2 不在编译路径中（仅 Cargo.lock 残留）
#   - RUSTSEC-2026-0194/0195 (quick-xml 0.39.4): 等待 typespec 与 wayland-scanner 在 crates.io
#     发布使用 quick-xml >=0.41.0 的新版本
#   - 多个 unmaintained/unsound 依赖: gtk-rs GTK3 绑定、proc-macro-error 系列、
#     rustls-pemfile、ttf-parser、unic-*、atomic-polyfill、glib 等，均为深层传递依赖，
#     上游未发布修复版本，已通过 .cargo/audit.toml 显式忽略并记录 rationale
# cargo audit 配置: .cargo/audit.toml

[workspace.lints.rust]
unsafe_code = "forbid"
double_negations = "warn"
irrefutable_let_patterns = "allow"
# Rust 1.95+ 新增lints (1.97+ 仍适用)
unused_crate_dependencies = "warn"
missing_docs = "allow"
# 声明 nightly 预览模块使用的自定义 cfg，避免 unexpected_cfgs 警告
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)', 'cfg(kani)', 'cfg(prusti)'] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
cargo = { level = "allow", priority = -1 }
# 额外有用的lints
match_wildcard_for_single_variants = "warn"
redundant_closure_for_method_calls = "warn"
# Rust 1.95+ 推荐lints (1.97+ 仍适用)
ignored_unit_patterns = "warn"
manual_c_str_literals = "warn"
unnecessary_map_on_constructor = "warn"
map_with_unused_argument_over_ranges = "warn"
unnecessary_semicolon = "warn"
unused_result_ok = "warn"
zero_repeat_side_effects = "warn"
manual_is_power_of_two = "warn"
unnecessary_min_or_max = "warn"
single_match_else = "allow"
needless_lifetimes = "warn"
# 2026-07-01: rust_197_features.rs 清理后固化的 lint 策略
borrowed_box = "deny"
let_and_return = "deny"
manual_div_ceil = "deny"
non_minimal_cfg = "deny"
result_unit_err = "deny"
type_complexity = "allow"
too_many_arguments = "allow"
# 异步相关
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
# 性能相关
unnecessary_box_returns = "warn"
# 代码质量
module_name_repetitions = "allow"
struct_field_names = "allow"
similar_names = "allow"

# 注: core2 补丁已移除
# multihash 0.19.4+ / libp2p-core 已迁移到 no_std_io2，不再需要 core2 补丁

# ============ [patch.crates-io] ============
# proc-macro-error2 2.0.1（leptos_macro / reactive_stores_macro 传递依赖）触发
# future-incompat 警告 E0365：`pub use proc_macro;` 重新导出私有 extern crate，
# 将在未来 Rust 版本变为硬错误（rust-lang/rust#127909）。
# 上游（GnomedDev/proc-macro-error-2）自 2024-09 后无修复发布，
# 因此 vendor 到本地并应用官方建议的一行修复（extern crate 改为 pub extern crate）。
# 上游发布修复版后应移除此 patch。
[patch.crates-io]
proc-macro-error2 = { path = "vendor/proc-macro-error2" }
