[package]
name = "c06_async"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "c06_async"
path = "src/lib.rs"

[[bin]]
name = "c06_async"
path = "src/bin/main.rs"
