[package]
name = "c06_async"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
tokio = { version = ">=1.44", features = ["full"] }
tokio-stream = ">=0.1"
tracing = ">=0.1"
tracing-subscriber = ">=0.3"
tokio-console = ">=0.1.11"
futures = ">=0.3.31"
crossterm = { version = ">=0.28", features = ["event-stream"] }

actix-web = ">=4"

axum = ">=0.8" 

serde = { version = ">=1.0.219", features = ["derive"] }
serde_json = ">=1.0.140"

[dev-dependencies]
criterion = { version = ">=0.5", features = ["html_reports"] }

[lib]
name = "c06_async"
path = "src/lib.rs"

[[bin]]
name = "c06_async"
path = "src/bin/main.rs"
