[package]
name = "c11_frameworks"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
thiserror = "2.0.12"
anyhow = "1.0.97"

diesel = { version = "2.2.8", features = ["postgres"] }
dotenvy = "0.15"
diesel_migrations = { version = "2.0", features = ["sqlite", "mysql", "postgres"] }

serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }


[lib]
name = "c11_frameworks"
path = "src/lib.rs"

[[bin]]
name = "c11_frameworks"
path = "src/bin/main.rs"
