[package]
name = "c13_microservice"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = ">=1.44.1", features = ["full"] }


[lib]
name = "c13_microservice"
path = "src/lib.rs"

[[bin]]
name = "c13_microservice"
path = "src/bin/main.rs"

[[example]]
name = "optl_exp01"
path = "examples/optl_exp01.rs"
