[package]
name = "exercises"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors = ["Rust Learning Community"]
repository = "https://github.com/rust-lang/rust-lang-learning"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rayon = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)', 'cfg(kani)'] }
