[package]
name = "c01_ownership_borrow_scope"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["ownership", "borrowing", "lifetimes", "memory-safety"]
categories = ["no-std", "development-tools::testing"]
description = "Rust ownership, borrowing, and scope system learning module"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
common = { workspace = true, features = ["serde", "error-trait", "async"] }
tokio = { workspace = true }
thiserror = { workspace = true }

[lints.rust]
unsafe_code = "allow"
missing_docs = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(polonius)', 'cfg(kani)'] }

[lints.clippy]
borrowed_box = "deny"

[dev-dependencies]
criterion = { workspace = true }

[lib]
name = "c01_ownership_borrow_scope"
path = "src/lib.rs"

[[bin]]
name = "obs"
path = "src/bin/main.rs"

[[bench]]
name = "performance_benchmarks"
harness = false

[[bench]]
name = "rust_192_benchmarks"
harness = false

[[bench]]
name = "rust_194_benchmarks"
harness = false
