[package]
name = "c02_type_system"
version = "0.1.0"
edition = "2024"
resolver = "3"
rust-version = "1.96.0"
authors = ["Rust Learning Community"]
description = "Rust type system learning module"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rust-lang-learning"

[dependencies]
common = { workspace = true, features = ["serde", "error-trait", "async"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }


[dev-dependencies]
criterion = { workspace = true }

[lib]
name = "c02_type_system"
path = "src/lib.rs"

[[bin]]
name = "ts"
path = "src/bin/main.rs"

[[bench]]
name = "performance_benchmarks"
harness = false

[[bench]]
name = "rust_192_benchmarks"
harness = false
