[package]
name = "c02_type_system"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.1"
authors = ["Rust Learning Community"]
keywords = ["type-system", "generics", "traits", "pattern-matching"]
categories = ["no-std", "development-tools::testing"]
description = "Rust type system learning module"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rust-lang-learning"

[dependencies]
common = { workspace = true, features = ["serde", "error-trait", "async"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[lints.rust]
unsafe_code = "allow"
missing_docs = "allow"
# 声明 nightly 预览模块与 Kani / Verus 使用的 cfg 条件名，避免 unexpected_cfgs 警告
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)', 'cfg(kani)', 'cfg(verus)'] }

[lib]
name = "c02_type_system"
path = "src/lib.rs"

[[bin]]
name = "ts"
path = "src/bin/main.rs"

[[bench]]
name = "performance_benchmarks"
harness = false

[[bench]]
name = "rust_192_benchmarks"
harness = false
