[package]
name = "c03_control_fn"
version = "0.1.0"
edition = "2024"
resolver = "3"
rust-version = "1.92"
authors = ["Rust Control Flow & Functions Research Team"]
description = "Rust 1.92 控制流与函数特性研究项目 - 包含异步编程、类型系统、性能优化等最新特性"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/control-flow-functions"
keywords = ["rust", "control-flow", "functions", "async", "generics", "performance"]
categories = ["development-tools", "system-programming"]

[dependencies]
# 异步运行时支持
tokio = { workspace = true }
# 异步流处理
tokio-stream = { workspace = true }
# Future工具
futures = { workspace = true, optional = true }
# 性能测试
fastrace = { version = ">=0.7.0", features = ["enable"] }
# 序列化支持
serde = { workspace = true }
# 错误处理
anyhow = { workspace = true }
thiserror = { workspace = true }
# 日志支持
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# 测试工具
criterion = { workspace = true, optional = true }
proptest = { workspace = true, optional = true }
# 系统信息
num_cpus = { workspace = true }
# 随机数生成
fastrand = "2.3.0"
# 时间处理
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[features]
default = ["std", "async", "generics"]
std = []
async = ["tokio/full", "futures"]
generics = []
performance = ["fastrace/enable"]
bench = ["criterion"]
test = ["proptest"]
nightly = []
custom = []
debug = []
dev = []

[lib]
name = "c03_control_fn"
path = "src/lib.rs"

[[example]]
name = "control_flow_example"
path = "examples/control_flow_example.rs"

[[example]]
name = "rust_189_async_features"
path = "examples/rust_189_async_features.rs"

[[example]]
name = "rust_189_generic_features"
path = "examples/rust_189_generic_features.rs"

[[example]]
name = "rust_189_performance_features"
path = "examples/rust_189_performance_features.rs"

[[example]]
name = "control_flow_rust_189_comprehensive_demo"
path = "examples/control_flow_rust_189_comprehensive_demo.rs"

[[example]]
name = "control_flow_rust_190_comprehensive_demo"
path = "examples/control_flow_rust_190_comprehensive_demo.rs"

[[example]]
name = "rust_190_complete_features_demo"
path = "examples/rust_190_complete_features_demo.rs"

[[example]]
name = "rust_190_advanced_comprehensive_demo"
path = "examples/rust_190_advanced_comprehensive_demo.rs"

[[test]]
name = "rust_190_comprehensive_tests"
path = "tests/rust_190_comprehensive_tests.rs"

[[example]]
name = "rust_189_enhanced_features_demo"
path = "examples/rust_189_enhanced_features_demo.rs"

[[example]]
name = "control_flow_functions_189"
path = "examples/control_flow_functions_189.rs"

[[example]]
name = "rust_189_basic_syntax_comprehensive"
path = "examples/rust_189_basic_syntax_comprehensive.rs"

[[example]]
name = "rust_189_new_features_showcase"
path = "examples/rust_189_new_features_showcase.rs"

[[bin]]
name = "c03_control_fn"
path = "src/bin/main.rs"

[[bench]]
name = "rust_189_benchmarks"
harness = false
